--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.539.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
+    "react-router-dom": "^7.8.0",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.7"
