--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
     "react-router-dom": "^7.8.0",
+    "recharts": "^3.1.2",
     "sonner": "^2.0.7",
     "tailwindcss": "^4.1.11",
     "zustand": "^5.0.7"
